Upgrade zlib package.

--- a/zlib-1.2.8.dfsg/debian/changelog
+++ b/zlib-1.2.8.dfsg/debian/changelog
@@ -1,3 +1,10 @@
+zlib (1:1.2.8.dfsg-2) unstable; urgency=low
+
+  * Drop zlib-bin package as minizip has now been packaged separately,
+    delay due to lack of notice regarding upload (closes: #753070).
+
+ -- Mark Brown <broonie@debian.org>  Sat, 16 Aug 2014 15:12:11 +0100
+
 zlib (1:1.2.8.dfsg-1) unstable; urgency=low
 
   * New upstream release.
